Alterações nos valores

--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
         <link rel="stylesheet" href="./assets/css/variaveis.css">
         <link rel="stylesheet" href="./assets/css/estilo.css">
         
-        <title>Document</title>
+        <title>HZC | Home</title>
     </head>
     <body>
-        <img src="./assets/images/" alt="">
+        <!-- Nomenclatura de classes BEM-->
+        <header class="cabecalho">
+            <button class="cabeaclho__menu">menu</button>
+            <img class="cabecalho__logo" src="./assets/images/logo.svg" alt="Logotipo da HZC">
+            <button class="cabecalho__notificacao">notificação</button>
+        </header>
     </body>
 </html>
