--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
     <body>
         <!-- Nomenclatura de classes BEM-->
         <header class="cabecalho">
-            
-            <button class="cabeaclho__menu">menu</button>
+            <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
             <img class="cabecalho__logo" src="./assets/images/logo.svg" alt="Logotipo da HZC">
-            <button class="cabecalho__notificacao">notificação</button>
+            <button class="cabecalho__notificacao" aria-label="Notificação"><i></i></button>
         </header>
+
+        <nav class="menu-lateral">
+            <img src="./assets/images/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
+
+            <a href="" class="menu-lateral__link menu-lateral__link--inicio">Início</a>
+            <a href="" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
+            <a href="" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
+            <a href="" class="menu-lateral__link menu-lateral__link--integrantes">Integrantes</a>
+            <a href="" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
+            <a href="" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
+        </nav>
+
     </body>
 </html>
