--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="menu-lateral">
             <img src="./assets/images/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
 
-            <a href="" class="menu-lateral__link menu-lateral__link--inicio">Início</a>
+            <a href="" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
             <a href="" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
             <a href="" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
             <a href="" class="menu-lateral__link menu-lateral__link--integrantes">Integrantes</a>
@@ -34,5 +34,6 @@
             <a href="" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
         </nav>
 
+        <script src="js/index.js"></script>
     </body>
 </html>
