--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <header class="cabecalho">
             <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
             <img class="cabecalho__logo" src="./assets/images/logo.svg" alt="Logotipo da HZC">
+            <p class="cabecalho__perfil">Felipe Lima</p>
             <button class="cabecalho__notificacao" aria-label="Notificação"><i></i></button>
         </header>
 
@@ -36,7 +37,7 @@
 
         <main class="principal">
             <h2 class="titulo-pagina">Início</h2>
-            <article class="cartao cartao--destaque">
+            <article class="cartao cartao--destaque destaque-video">
                 <img src="./assets/images/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
                 
                 <div class="cartao__conteudo">
@@ -50,7 +51,44 @@
                 </div>
             </article>
 
-            <section class="secao">
+            <article class="cartao cartao--recentes videos-recentes">
+                <h3 class="cartao__titulo">Vídeos recentes</h3>
+                <a href="#" class="cartao__link">Ver todos</a>
+                <ul class="cartao__lista">
+                    <li class="cartao__item">
+                        <img class="cartao__item-thumbnail" src="./assets/images/miniatura_1.png" alt="Thumbnail">
+                        <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                        <p class="cartao__item-perfil">Felipe Lima</p>
+                    </li>
+
+                    <li class="cartao__item">
+                        <img class="cartao__item-thumbnail" src="./assets/images/miniatura_1.png" alt="Thumbnail">
+                        <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                        <p class="cartao__item-perfil">Felipe Lima</p>
+                    </li>
+
+                    <li class="cartao__item">
+                        <img class="cartao__item-thumbnail" src="./assets/images/miniatura_1.png" alt="Thumbnail">
+                        <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                        <p class="cartao__item-perfil">Felipe Lima</p>
+                    </li>
+
+                    <li class="cartao__item">
+                        <img class="cartao__item-thumbnail" src="./assets/images/miniatura_1.png" alt="Thumbnail">
+                        <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                        <p class="cartao__item-perfil">Felipe Lima</p>
+                    </li>
+
+                    <li class="cartao__item">
+                        <img class="cartao__item-thumbnail" src="./assets/images/miniatura_1.png" alt="Thumbnail">
+                        <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                        <p class="cartao__item-perfil">Felipe Lima</p>
+                    </li>
+
+                </ul>
+            </article>
+
+            <section class="secao secao-videos">
                 <h3 class="titulo-secao">Videos mais visos</h3>
 
                 <article class="cartao">
@@ -100,10 +138,45 @@
                         <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                     </div>
                 </article>
-
             </section>
 
-            <article class="cartao cartao--destaque">
+            <article class="cartao cartao--recentes produtos-recentes">
+                <h3 class="cartao__titulo">Vídeos recentes</h3>
+                <a href="#" class="cartao__link">Ver todos</a>
+                <ul class="cartao__lista">
+                    <li class="cartao__item">
+                        <img class="cartao__item-thumbnail" src="./assets/images/miniatura_1.png" alt="Thumbnail">
+                        <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                        <p class="cartao__item-perfil">Felipe Lima</p>
+                    </li>
+
+                    <li class="cartao__item">
+                        <img class="cartao__item-thumbnail" src="./assets/images/miniatura_1.png" alt="Thumbnail">
+                        <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                        <p class="cartao__item-perfil">Felipe Lima</p>
+                    </li>
+
+                    <li class="cartao__item">
+                        <img class="cartao__item-thumbnail" src="./assets/images/miniatura_1.png" alt="Thumbnail">
+                        <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                        <p class="cartao__item-perfil">Felipe Lima</p>
+                    </li>
+
+                    <li class="cartao__item">
+                        <img class="cartao__item-thumbnail" src="./assets/images/miniatura_1.png" alt="Thumbnail">
+                        <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                        <p class="cartao__item-perfil">Felipe Lima</p>
+                    </li>
+
+                    <li class="cartao__item">
+                        <img class="cartao__item-thumbnail" src="./assets/images/miniatura_1.png" alt="Thumbnail">
+                        <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                        <p class="cartao__item-perfil">Felipe Lima</p>
+                    </li>
+                </ul>
+            </article>
+
+            <article class="cartao cartao--destaque destaque-produtos">
                 <img src="./assets/images/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
                 
                 <div class="cartao__conteudo">
@@ -117,7 +190,7 @@
                 </div>
             </article>
 
-            <section class="secao">
+            <section class="secao secao-produtos">
                 <h3 class="titulo-secao">Videos mais visos</h3>
 
                 <article class="cartao">
