--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
         <main class="principal">
             <h2 class="titulo-pagina">Início</h2>
             <article class="cartao cartao--destaque destaque-video">
-                <img src="./assets/images/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
-                
+                <img src="./assets/images/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
+                <img src="./assets/images/banner_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
+
                 <div class="cartao__conteudo">
                     <p class="cartao__destaque">Vídeo em destaque</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
@@ -177,8 +178,9 @@
             </article>
 
             <article class="cartao cartao--destaque destaque-produtos">
-                <img src="./assets/images/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
-                
+                <img src="./assets/images/banner-mobile_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
+                <img src="./assets/images/banner_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
+
                 <div class="cartao__conteudo">
                     <p class="cartao__destaque">Vídeo em destaque</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
